@@ -1,3 +1,9 @@
+2018-08-03  Bogdan Harjoc  <harjoc@gmail.com>
+
+	PR c/86690
+	* c-typeck.c (lookup_field): Do not use TYPE_LANG_SPECIFIC after
+	errors.
+
 2018-08-01  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/86650
